# ratherlabs-multiversx-hackathon

./: README.md  bumper_script.js  coinflip_hack.py
coinflip-hack/: Cargo.toml  deploy-shard0.interaction.json
coinflip-hack/meta/: Cargo.toml
coinflip-hack/meta/src/: main.rs
coinflip-hack/output/: coinflip-hack.abi.json  coinflip-hack.imports.json  coinflip-hack.mxsc.json  coinflip-hack.wasm
coinflip-hack/scenarios/: coinflip_hack.scen.json
coinflip-hack/src/: coinflip_hack.rs
coinflip-hack/tests/: coinflip_hack_scenario_go_test.rs  coinflip_hack_scenario_rs_test.rs
coinflip-hack/wasm/: Cargo.toml
coinflip-hack/wasm/src/: lib.rs
gass-pass-hack/: Cargo.toml  deploy.sh  simulate_gas_test.py
gass-pass-hack/meta/: Cargo.toml
gass-pass-hack/meta/src/: main.rs
gass-pass-hack/output/: gass-pass-hack.abi.json  gass-pass-hack.imports.json  gass-pass-hack.mxsc.json  gass-pass-hack.wasm
gass-pass-hack/scenarios/: exact_gas.scen.json  gass_pass_scenario.json  wrong_gas.scen.json
gass-pass-hack/src/: gass_pass_hack.rs
gass-pass-hack/src/common/: Cargo.toml
gass-pass-hack/src/common/src/: lib.rs
gass-pass-hack/tests/: gass_pass_hack_scenario_rs_test.rs
gass-pass-hack/wasm/: Cargo.toml
gass-pass-hack/wasm/src/: lib.rs
